--- a/jsonbuilder/css/style.css
+++ b/jsonbuilder/css/style.css
@@ -141,12 +141,15 @@ h1{font-size:1.5em}
 .collapse:hover {background-color: #881391}
 
 .key .path {margin-left:24px}
-.key:hover >.option_tray{visibility:visible}
-.key:hover >.option_tray>ul{left:0}
+/*.key:hover >.option_tray{visibility:visible}
+.key:hover >.option_tray>ul{left:0}*/
+
+/*.val >.json_block:hover >.option_tray{visibility:visible}
+.val >.json_block:hover >.option_tray>ul{left:0}*/
 
 /* advance option */
-.option_tray {visibility: hidden;position: absolute;left: 1px;bottom: calc(100% + 0px);z-index: 3;overflow: hidden}
-.option_tray > ul {background: #881391;border: 1px solid #580b5e;border-radius: 2px;height: 20px;white-space: nowrap;text-shadow: 0px 1px 0px #5c0d62;padding: 0;color: #fff;position: relative;left: calc(-100%);transition: all .5s ease;-webkit-transition: all .5s ease;-moz-transition: all .5s ease;-ms-transition: all .5s ease;-o-transition: all .5s ease}
+.option_tray {display: none;position: absolute;left: 1px;bottom: calc(100% + 0px);z-index: 3;overflow: hidden}
+.option_tray > ul {background: #881391;border: 1px solid #580b5e;border-radius: 2px;height: 20px;white-space: nowrap;text-shadow: 0px 1px 0px #5c0d62;padding: 0;color: #fff;position: relative;left: calc(-100%);/*transition: all .5s ease;-webkit-transition: all .5s ease;-moz-transition: all .5s ease;-ms-transition: all .5s ease;-o-transition: all .5s ease*/}
 
 .op_item>.ops {line-height: normal}
 .op_item{font-size: 12px;text-align: center;vertical-align: top;padding: 0 4px;display: inline-block;line-height: 18px;height: 18px;border-right: 1px solid #a018ab;border-left: 1px solid #680d6f;border-width: 0px 1px;}
