--- a/jsonbuilder/website/css/common.css
+++ b/jsonbuilder/website/css/common.css
@@ -18,6 +18,9 @@ html,body{min-height:100%}
 .tl{font-size:14px}
 .main-title{position:relative}
 
+.changeview {font-size: 12px;position: absolute;right: -1px;bottom: -1px;background: #f5f5f5;padding: 2px 4px;line-height: 30px;border-radius: 2px 0 0 0;border: 1px solid #ddd;cursor: default}
+.changeview span{content: "";width: 25px;height: 25px;display: inline-block;background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/VisualEditor_-_Icon_-_Layout-rtl.svg/2000px-VisualEditor_-_Icon_-_Layout-rtl.svg.png');background-size: 100%;vertical-align: middle;background-color: white;border-radius: 50%;border: 1px solid #d0d0d0;cursor: pointer}
+
 .menu > li>a {color: #000;padding: 3px 6px;background: #fff;float: left}
 .menu {font-size: 12px;float: right;margin-top: 34px;border: 1px solid #ddd;border-bottom: 0;border-radius: 5px 5px 0 0;overflow: hidden;display: none;}
 .menu>li {float: left;border-right: 1px solid #ddd}
