--- a/jsonbuilder/website/css/common.css
+++ b/jsonbuilder/website/css/common.css
@@ -3,10 +3,14 @@ html{position:relative}
 body{padding-bottom:30px}
 html,body{min-height:100%}
 *{margin:0;padding:0;border:0;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;-ms-box-sizing:border-box;-o-box-sizing:border-box;-khtml-box-sizing:border-box;list-style:none;text-decoration:none;font-family:'console','Inconsolata',"Helvetica Neue", Helvetica, Arial, sans-serif;font-weight:400;outline:none}
+
+.clearfix{clear:both;}
+.clearfix:before,.clearfix:after{content: "";display:table;clear: both}
+
 .container.top-header{margin-bottom:16px}
 .container{width:600px;margin:0 auto}
 .logo{background:url('../images/logo_shadow.png');width:50px;height:45px;display:inline-block;vertical-align:middle;background-size:40px;background-repeat:no-repeat;background-position:center}
-.top-header{padding:10px 6px;background-color:#EEEEEE;border:1px solid #ddd;border-top:0;border-radius:0 0 2px 2px}
+.top-header{position:relative;padding:10px 6px;background-color:#EEEEEE;border:1px solid #ddd;border-top:0;border-radius:0 0 2px 2px}
 .lgsl{position: absolute;left: 50%;top: 8px;width: 250px;text-align: center;margin-left: -125px;font-size: 1em}
 .show{display:block!important}
 .hide{display:none}
@@ -19,13 +23,39 @@ html,body{min-height:100%}
 .main-title{position:relative}
 
 .changeview {font-size: 12px;position: absolute;right: -1px;bottom: -1px;background: #f5f5f5;padding: 2px 4px;line-height: 30px;border-radius: 2px 0 0 0;border: 1px solid #ddd;cursor: default}
-.changeview span{content: "";width: 25px;height: 25px;display: inline-block;background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/VisualEditor_-_Icon_-_Layout-rtl.svg/2000px-VisualEditor_-_Icon_-_Layout-rtl.svg.png');background-size: 100%;vertical-align: middle;background-color: white;border-radius: 50%;border: 1px solid #d0d0d0;cursor: pointer}
+.changeview span{content: "";width: 25px;height: 25px;display: inline-block;background-image: url('../images/view120x120.png');background-size: 13px;background-position: center;background-repeat: no-repeat;vertical-align: middle;background-color: white;border-radius: 50%;border: 1px solid #d0d0d0;cursor: pointer;}
 
 .menu > li>a {color: #000;padding: 3px 6px;background: #fff;float: left}
 .menu {font-size: 12px;float: right;margin-top: 34px;border: 1px solid #ddd;border-bottom: 0;border-radius: 5px 5px 0 0;overflow: hidden;display: none;}
 .menu>li {float: left;border-right: 1px solid #ddd}
 .menu > li.active>a {border-bottom: 1px solid #881391}
 .menu>li:last-child {border-right: 0}
+
+.cmd-wrap {display: inline-block;vertical-align: middle;}
+.cmd-btn{text-align:center}
+.dir-ico {display: block;text-align: center;margin: 4px 0;color: #A3A3A3;}
+.cmd-wrap .fa-long-arrow-left{display: none}
+.cmd-wrap .fa-long-arrow-right{display: none}
+
+.cmd{border:1px solid #B7B7B7;border-radius:2px;padding:5px;font-size:12px;background-color:#fff;cursor:pointer}
+.cmd:active{background-color:#EEEEEE}
+
+/* horizontal view */
+.horizontalView .container {width: 98%}
+.horizontalView #jsonEditor {display: inline-block;vertical-align: middle;width:45%;margin: 0;height:100%}
+.horizontalView .result_pad {display: inline-block;vertical-align: middle;width:45%;margin: 0;height:100%}
+.horizontalView .cmd-btn {display: inline-block;vertical-align: top;width: 10%;padding: 0 25px}
+.horizontalView .cmd-wrap .fa-long-arrow-left{display: block}
+.horizontalView .cmd-wrap .fa-long-arrow-right{display: block}
+.horizontalView .cmd-wrap .fa-long-arrow-up{display: none}
+.horizontalView .cmd-wrap .fa-long-arrow-down{display: none}
+.horizontalView .cmd:not(.new-json){border: 0}
+.horizontalView .cmd-wrap{border:1px solid #B7B7B7;border-radius: 2px;margin: 8px 0;cursor: pointer}
+.horizontalView .cmd-wrap:active {background-color: #EEEEEE}
+.horizontalView .cmd-wrap:active .cmd:not(.new-json){background-color: #EEEEEE}
+.horizontalView .json_editor {max-height: none;height: 100%}
+.horizontalView .text-area-wrap {height: calc(100% - 95px);overflow: auto}
+/* horizontal view */
 
 .foot{position:absolute;bottom:0;width:100%}
 .footer{padding:6px;background:#EEE;border:1px solid#ddd;border-radius:2px 2px 0 0}
