--- a/website/css/style.css
+++ b/website/css/style.css
@@ -2,7 +2,7 @@
 /*@import url(https://fonts.googleapis.com/css?family=Inconsolata:400);*/
 @import "common.css";
 
-#jsonEditor{position:relative;margin:15px 0 8px 0;padding:15px;border:1px solid #ddd;background:#eee;border-radius:2px}
+#jsonEditor{position:relative;margin:0 0 8px 0;padding:15px;border:1px solid #ddd;background:#eee;border-radius:2px}
 keyframes process{0%{background-position:0 0}100%{background-position:-34px 0}}
 @-webkit-keyframes process{0%{background-position:0 0}100%{background-position:-34px 0}}
 @-moz-keyframes process{0%{background-position:0 0}100%{background-position:-34px 0}}
@@ -104,9 +104,6 @@ h1{font-size:1.5em}
 .line:before{content:"";left:-1px;top:0;position:absolute;width:6px;height:10px;border-bottom:1px dotted #000;background-color:#EEEEEE}
 .line:after{content:"";left:-1px;bottom:0;position:absolute;width:6px;height:8px;border-top:1px dotted #000;background-color:#EEEEEE}
 
-.cmd{border:1px solid #B7B7B7;border-radius:2px;padding:5px;font-size:12px;background-color:#fff;cursor:pointer}
-.cmd:active{background-color:#EEEEEE}
-
 .fb_like{margin:12px 0}
 
 .path{position:absolute;left:100%;height:16px;line-height:15px;font-size:11px;margin-left:12px;margin-top:3px;color:#BDBDBD;text-shadow:0px 1px 0px #FFF;z-index:1;white-space:nowrap}
@@ -120,9 +117,6 @@ h1{font-size:1.5em}
 .new-json {position: absolute;top: 0;right: 0;margin: 8px;z-index: 3;}
 .new-json:before {content: "\f005";font-family: FontAwesome;margin-right: 4px;color:#DAA520;}
 
-.cmd-wrap {display: inline-block;vertical-align: top;}
-.dir-ico {display: block;text-align: center;margin: 4px 0;color: #A3A3A3;}
-
 .parse_error {float: right;color: #FFFFFF;font-size: 12px;background: #b22;padding: 2px 4px;border-radius: 2px;}
 .parse_error:before {content: "\f071";font-family: FontAwesome;margin-right: 4px;}
 
@@ -135,7 +129,6 @@ h1{font-size:1.5em}
 .t-point:first-child {margin-top: 0;}
 .t-point:last-child {margin-bottom: 0;}
 
-.cmd-btn{text-align:center}
 .expand, .collapse{display: none;width: 8px;height: 8px;background: #881391;vertical-align: middle;border-radius: 50%;border: 1px solid #fff;box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);cursor: pointer;}
 .collapse{display: inline-block;background: #979797;}
 .collapse:hover {background-color: #881391;}
