--- a/jsonbuilder/website/css/common.css
+++ b/jsonbuilder/website/css/common.css
@@ -4,17 +4,17 @@ body{padding-bottom:30px}
 html,body{min-height:100%}
 *{margin:0;padding:0;border:0;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;-ms-box-sizing:border-box;-o-box-sizing:border-box;-khtml-box-sizing:border-box;list-style:none;text-decoration:none;font-family:'console','Inconsolata',"Helvetica Neue", Helvetica, Arial, sans-serif;font-weight:400;outline:none}
 
-#fb-root {position: fixed;left: 11px;top: 40%}
+#fb-root {position:fixed;left:11px;top:40%}
 
 .clearfix{clear:both}
-.clearfix:before,.clearfix:after{content: "";display:table;clear: both}
+.clearfix:before,.clearfix:after{content:"";display:table;clear:both}
 
 .container.top-header{margin-bottom:16px}
 .container{width:600px;margin:0 auto}
 
 .logo{background:url('../images/logo_shadow.png');width:50px;height:45px;display:inline-block;vertical-align:middle;background-size:40px;background-repeat:no-repeat;background-position:center}
 .top-header{position:relative;padding:10px 6px;background-color:#EEEEEE;border:1px solid #ddd;border-top:0;border-radius:0 0 2px 2px}
-.lgsl{position: absolute;left: 50%;top: 8px;width: 250px;text-align: center;margin-left: -125px;font-size: 1em}
+.lgsl{position:absolute;left:50%;top:8px;width:250px;text-align:center;margin-left:-125px;font-size:1em}
 .show{display:block!important}
 .hide{display:none}
 ._block{padding:15px;margin:8px 0 15px 0;border:1px solid #ddd;background:#eee;border-radius:2px}
@@ -25,57 +25,67 @@ html,body{min-height:100%}
 .tl{font-size:14px}
 .main-title{position:relative}
 
-.changeview {font-size: 12px;position: absolute;right: -1px;bottom: -1px;background: #f5f5f5;padding: 2px 4px;line-height: 30px;border-radius: 2px 0 0 0;border: 1px solid #ddd;cursor: default}
-.changeview span{content: "";width: 25px;height: 25px;display: inline-block;background-image: url('../images/view120x120.png');background-size: 13px;background-position: center;background-repeat: no-repeat;vertical-align: middle;background-color: white;border-radius: 50%;border: 1px solid #d0d0d0;cursor: pointer}
+.changeview {font-size:12px;position:absolute;right:-1px;bottom:-1px;background:#f5f5f5;padding:2px 4px;line-height:30px;border-radius:2px 0 0 0;border:1px solid #ddd;cursor:default}
+.changeview span{content:"";width:25px;height:25px;display:inline-block;background-image:url('../images/view120x120.png');background-size:13px;background-position:center;background-repeat:no-repeat;vertical-align:middle;background-color:white;border-radius:50%;border:1px solid #d0d0d0;cursor:pointer}
 
-.menu > li > a {color: #000;padding: 3px 6px;background: #fff;float: left}
-.menu {font-size: 12px;float: right;margin-top: 34px;border: 1px solid #ddd;border-bottom: 0;border-radius: 5px 5px 0 0;overflow: hidden;display: none}
-.menu > li {float: left;border-right: 1px solid #ddd}
-.menu > li.active>a {border-bottom: 1px solid #881391}
-.menu > li:last-child {border-right: 0}
+.menu > li > a {color:#000;padding:3px 6px;background:#fff;float:left}
+.menu {font-size:12px;float:right;margin-top:34px;border:1px solid #ddd;border-bottom:0;border-radius:5px 5px 0 0;overflow:hidden;display:none}
+.menu > li {float:left;border-right:1px solid #ddd}
+.menu > li.active>a {border-bottom:1px solid #881391}
+.menu > li:last-child {border-right:0}
 
 .cmd-btn{text-align:center}
-.dir-ico {display: block;text-align: center;margin: 4px 0;color: #A3A3A3}
+.dir-ico {display:block;text-align:center;margin:4px 0;color:#A3A3A3}
 
-.cmd-wrap {display: inline-block;vertical-align: middle}
-.cmd-wrap .fa-long-arrow-left{display: none}
-.cmd-wrap .fa-long-arrow-right{display: none}
+.cmd-wrap {display:inline-block;vertical-align:middle}
+.cmd-wrap .fa-long-arrow-left{display:none}
+.cmd-wrap .fa-long-arrow-right{display:none}
 
 .cmd{border:1px solid #B7B7B7;border-radius:2px;padding:5px;font-size:12px;background-color:#fff;cursor:pointer}
 .cmd:active{background-color:#EEEEEE}
 
-.star-icon:before {content: "\f005";font-family: FontAwesome;margin-right: 4px;color:#DAA520}
+.star-icon:before {content:"\f005";font-family:FontAwesome;margin-right:4px;color:#DAA520}
 
-.option-menu {border-radius: 2px;border: 1px solid #c6c6c6;cursor: pointer;display:inline-block;vertical-align:top;text-align: left;box-shadow:-1px 1px 5px rgba(0, 0, 0);}
-.option-menu li {background-color: #fff;padding: 2px 18px;white-space: nowrap;padding: 6px 18px;font-size: 12px;}
-.option-menu li:before {margin-left: -9px;margin-right: 8px}
-.option-menu li:hover {background-color: #dfdfdf}
+.option-menu {border-radius:2px;border:1px solid #c6c6c6;cursor:pointer;display:inline-block;vertical-align:top;text-align:left;box-shadow:-1px 1px 5px rgba(0, 0, 0)}
+.option-menu li {background-color:#fff;padding:2px 18px;white-space:nowrap;padding:6px 18px;font-size:12px}
+.option-menu li:before {margin-left:-9px;margin-right:8px}
+.option-menu li:hover {background-color:#dfdfdf}
 
-.option-list {position: absolute;right: 0px;top: 4px;z-index: 3;padding-top: 21px;width: 26px;direction: rtl}
-.option-list:before {content: "";background-image: url(../images/kebab-menu.png);background-size: 16px;position: absolute;top: 0;right: 0;height: 21px;width: 100%;background-repeat: no-repeat;background-position: center 3px;opacity: 0.5;cursor: pointer}
+.option-list {position:absolute;right:0;top:4px;z-index:3;padding-top:21px;width:26px;direction:rtl}
+.option-list:before {content:"";background-image:url(../images/kebab-menu.png);background-size:16px;position:absolute;top:0;right:0;height:21px;width:100%;background-repeat:no-repeat;background-position:center 3px;opacity:0.5;cursor:pointer}
 .option-list:hover:before {opacity:1}
 /* horizontal view */
-.horizontalView .container {width: 98%}
-.horizontalView #jsonEditor {display: inline-block;vertical-align: middle;width:45%;margin: 0;height:100%}
-.horizontalView .result_pad {display: inline-block;vertical-align: middle;width:45%;margin: 0;height:100%}
-.horizontalView .cmd-btn {display: inline-block;vertical-align: top;width: 10%;padding: 0 25px}
-.horizontalView .cmd:not(.new-json){border: 0}
+.horizontalView .container {width:98%}
+.horizontalView #jsonEditor {display:inline-block;vertical-align:middle;width:45%;margin:0;height:100%}
+.horizontalView .result_pad {display:inline-block;vertical-align:middle;width:45%;margin:0;height:100%}
+.horizontalView .cmd-btn {display:inline-block;vertical-align:top;width:10%;padding:0 25px}
+.horizontalView .cmd:not(.new-json){border:0}
 
-.horizontalView .cmd-wrap .fa-long-arrow-left{display: block}
-.horizontalView .cmd-wrap .fa-long-arrow-right{display: block}
-.horizontalView .cmd-wrap .fa-long-arrow-up{display: none}
-.horizontalView .cmd-wrap .fa-long-arrow-down{display: none}
+.horizontalView .cmd-wrap .fa-long-arrow-left{display:block}
+.horizontalView .cmd-wrap .fa-long-arrow-right{display:block}
+.horizontalView .cmd-wrap .fa-long-arrow-up{display:none}
+.horizontalView .cmd-wrap .fa-long-arrow-down{display:none}
 .horizontalView .cmd-wrap:first-child{margin-top:0}
-.horizontalView .cmd-wrap{border:1px solid #B7B7B7;border-radius: 2px;margin: 8px 0;cursor: pointer}
-.horizontalView .cmd-wrap:active {background-color: #EEEEEE}
-.horizontalView .cmd-wrap:active .cmd:not(.new-json){background-color: #EEEEEE}
+.horizontalView .cmd-wrap{border:1px solid #B7B7B7;border-radius:2px;margin:8px 0;cursor:pointer}
+.horizontalView .cmd-wrap:active {background-color:#EEEEEE}
+.horizontalView .cmd-wrap:active .cmd:not(.new-json){background-color:#EEEEEE}
 
-.horizontalView .json_editor {max-height: none;height: 100%}
-.horizontalView .text-area-wrap {height: calc(100% - 95px);overflow: auto}
+.horizontalView .json_editor {max-height:none;height:100%}
+.horizontalView .text-area-wrap {height:calc(100% - 95px);overflow:auto}
 
-.horizontalView #fb-root {position: static;margin-top: 8px;}
-.horizontalView #fb-root > div {display: table;margin: 0 auto}
+.horizontalView #fb-root {position:static;margin-top:8px}
+.horizontalView #fb-root > div {display:table;margin:0 auto}
 /* horizontal view */
 
 .foot{position:absolute;bottom:0;width:100%}
 .footer{padding:6px;background:#EEE;border:1px solid#ddd;border-radius:2px 2px 0 0}
+
+.intro-tip {position:absolute;background-color:#881491;color:#fff;line-height:20px;font-size:12px;border:1px solid #6a0871;padding:0 6px;border-radius:2px;cursor:default;direction:rtl}
+.intro-tip.direction-ltr:after {content:"";position:absolute;right:-5px;top:4px;border-width:6px 0 6px 6px;border-style:solid;border-color:transparent #881491}
+.intro-tip.direction-ltr:before {content:"";position:absolute;right:-6px;top:4px;border-width:6px 0 6px 6px;border-style:solid;border-color:transparent #6a0871}
+
+@keyframes anim{
+    0% {left: 310px;}
+    50%{left: 320px;}
+    100%{left: 310px;}
+}
